# mlflow_hydra_optuna_the_easy_way

./: Dockerfile  README.md  makefile  pyproject.toml  requirements.dev.txt  requirements.txt
hydra/: default.yaml
outputs/2021-10-13/13-22-54/: random_forest_classifier.pickle
outputs/2021-10-13/13-22-54/mlruns/0/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/0bfb68d0811d4c47834c064749be4ba0/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/1405f193f3fc4d30acbe4c0a6b7070de/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/1680b7e762574f63b26419b5452bb475/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/21542aea78ce4d2bba7bc1301f109bd9/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/27df09600b1245928b9b6d2eacb83376/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/2fd8fb21d9fc45809b0b1f83643d54a2/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/319d68c8f2fc4433b8f0a7d4408b78da/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/3443754567674917b588019e1f1f8574/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/34e0c567e18340e4a5f7377302020e91/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/3822c44668fa4558af2a0740a6350650/: meta.yaml
outputs/2021-10-13/13-22-54/mlruns/0/3c8540b236c34ffcb7c25b10f38beeb8/: meta.yaml
outputs/2021-10-13/13-27-41/: light_gbm_classifier.pickle  random_forest_classifier.pickle
outputs/2021-10-13/13-27-41/.hydra/: config.yaml
outputs/2021-10-13/13-27-41/mlruns/0/: meta.yaml
src/: main.py
src/dataset/: load_dataset.py
src/middleware/: logger.py
src/model/: model.py
src/search/: search.py
src/train/: train.py
(+240 files in other folders)
