[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
license = "MIT"
name = "mlflow_hydra_optuna_the_easy_way"
version = "0.0.0"

[tool.poetry.dependencies]
python = "3.9.5"
mlflow = "^1.20.2"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^1.0"
optuna = "^2.10.0"
hydra-core = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
